2004/04/14 19:50 (+0200) kaffetisch

	Merge from the stable-1-04 branch:

	* NEWS: Update.

	* typemap, GBoxed.xs: use INT2PTR to hush warnings about improper
	casting on cygwin.

	* GError.xs: Mark unused variables.

	* Glib.xs: Use explicit casts in the version checking part of the
	BOOT code.

	* GenPod.pm: document the __hide__, __gerror__, and __function__
	modifiers for the apidoc directive.  Add $MAIN_MOD to the head of the
	see alsos list if it's set, so that the generated pages link to the
	correct extension.  Clean up the semantics of the copyright
	generation stuff, and make the docs a little clearer.

	* MakeHelper.pm: set $Glib::GenPod::MAIN_MOD with the module name in
	Glib::MakeHelper::postamble_docs_full, either from the depends object
	or the NAME key.

	* GenPod.pm
	* Glib.pm
	* MakeHelper.pm
	* ParseXSDoc.pm: Fix a spelling error here, adjust some grammar there.

	* t/8.t
	* GClosure.xs: don't clobber $_ when warning of unhandled exceptions.
	apparently the SAVE_DEFSV trick from a while back doesn't work.

	* Subclass.pm: beef up the docs.

2004/04/05 23:33 pcg

	* Glib.xs: gperl_sv_from_filename didn't check the return status
        of g_filename_to_utf8 properly, causing segfaults on invalid
        filenames.

2004/04/04 00:52 (-0500) muppetman

	* Glib.xs: actually do work in filename_from_unicode().  thanks to
	Jan Hudec for noticing this was broken.

2004/03/21 00:00 (-0500) muppetman

	merge from stable:

	* GMainLoop.xs, GObject.xs: bump version check versions

	* GUtils.xs, t/1.t: add Glib::GET_VERSION_INFO

	* GenPod.pm: sort the index

	* MakeHelper.pm: fix broken quoting

2004/03/17 17:09 (+0100) kaffeetisch

	* gperl.h (SvGObject_ornull): Use SvOK instead of SvTRUE.

	* gperl.h
	* typemap: Add typemaps for "const char_ornull *" and
	"char_ornull *".

2004/03/13 22:05 (-0500) muppetman

	* MakeHelper.pm: portability fixes; ask Config what make program we're
	using and generate the proper conditional syntax, lest we generate bogus