@@ -1,3 +1,7 @@
+2004/04/21 12:36 (-0400) muppetman
+
+	* GSignal.xs: remove invalid alias do_stuff_by_func().
+
 2004/04/14 19:50 (+0200) kaffetisch
 
 	Merge from the stable-1-04 branch:
